fixing spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   /* text-align: center; */
-  min-width: 1335px;
+  min-width: 1247px;
 }
 
 .App-logo {
